--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,28 @@
     "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "babel-jest": "^29.7.0",
     "formik": "^2.4.6",
+    "jest-unit": "^0.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.28.0",
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(axios|react-datepicker)/)\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,8 +53,15 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.45",
+    "setimmediate": "^1.0.5",
     "tailwindcss": "^3.4.10"
   }
 }
